--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@reach/router": "^1.3.4",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1"
   }
 }
